Fix margin bottom on small legend

--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -575,7 +575,7 @@ body {
 
 .legend-small {
     position: absolute;
-    margin-bottom: 60px;
+    margin-bottom: 110px;
     color: #0c2b65;
     border: 2px solid #0c2b65;
     padding-right: 5px;
